
    - Speed up the internal find_file() function (used for searching
      CPPPATH, LIBPATH, etc.).

    - Add support for using the Python "in" keyword on construction
      environments (for example, if "CPPPATH" in env: ...).

    - Fix use of Glob() when a repository or source directory contains
      an in-memory Node without a corresponding on-disk file or directory.

  From Rob Managan:

    - Scan for TeX files in the paths specified in the $TEXINPUTS
      construction variable and the $TEXINPUTS environment variable.

    - Configure the PDF() and PostScript() Builders as single_source so
      they know each source file generates a separate target file.

    - Add $EPSTOPDF, $EPSTOPDFFLAGS and $EPSTOPDFCOM

    - Add .tex as a valid extension for the PDF() builder.

    - Add regular expressions to find \input, \include and
      \includegraphics.

    - Support generating a .pdf file from a .eps source.

    - Recursive scan included input TeX files.

    - Handle requiring searched-for TeX input graphics files to have
      extensions (to avoid trying to build a .eps from itself, e.g.).

  From Greg Noel:

    - Make the Action() function handle positional parameters consistently.

    - Clarify use of Configure.CheckType().

    - Make the File.{Dir,Entry,File}() methods create their entries
      relative to the calling File's directory, not the SConscript
      directory.

    - Use the Python os.devnull variable to discard error output when
      looking for the $CC or $CXX version.

    - Mention LoadableModule() in the SharedLibrary() documentation.

  From Gary Oberbrunner:

    - Update the User's Guide to clarify use of the site_scons/
      directory and the site_init.py module.

    - Make env.AppendUnique() and env.PrependUnique remove duplicates
      within a passed-in list being added, too.

  From Randall Spangler:

    - Fix Glob() so an on-disk file or directory beginning with '#'
      doesn't throw an exception.


